RESOLVED FIXED199681
Share or Copy image from context menu does not share the correct data
https://bugs.webkit.org/show_bug.cgi?id=199681
Summary Share or Copy image from context menu does not share the correct data
Dean Jackson
Reported 2019-07-10 12:50:12 PDT
Share or Copy image from context menu does not share the correct data
Attachments
Patch (13.38 KB, patch)
2019-07-10 13:01 PDT, Dean Jackson
thorton: review+
Dean Jackson
Comment 1 2019-07-10 12:50:36 PDT
Dean Jackson
Comment 2 2019-07-10 13:01:59 PDT
Dean Jackson
Comment 3 2019-07-10 13:43:41 PDT
Note You need to log in before you can comment on or make changes to this bug.